# ChangeLog for net-proxy/haproxy
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/haproxy/ChangeLog,v 1.93 2014/05/28 17:08:27 idl0r Exp $

*haproxy-1.5_beta26 (28 May 2014)

  28 May 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta25.ebuild,
  +haproxy-1.5_beta26.ebuild:
  Version bump

*haproxy-1.5_beta25 (10 May 2014)

  10 May 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta22.ebuild,
  +haproxy-1.5_beta25.ebuild:
  Version bump. Cleanup

*haproxy-1.5_beta24 (26 Apr 2014)

  26 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta23.ebuild,
  +haproxy-1.5_beta24.ebuild:
  Version bump

*haproxy-1.5_beta23 (23 Apr 2014)

  23 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta21.ebuild,
  +haproxy-1.5_beta23.ebuild:
  Version bump

*haproxy-1.4.25 (27 Mar 2014)

  27 Mar 2014; Christian Ruppert <idl0r@gentoo.org> +haproxy-1.4.25.ebuild:
  Version bump

*haproxy-1.5_beta22 (03 Feb 2014)

  03 Feb 2014; Christian Ruppert <idl0r@gentoo.org>
  -haproxy-1.5_beta19-r1.ebuild, +haproxy-1.5_beta22.ebuild:
  Version bump

*haproxy-1.5_beta21 (17 Dec 2013)

  17 Dec 2013; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta20.ebuild,
  +haproxy-1.5_beta21.ebuild:
  Version bump.

*haproxy-1.5_beta20 (16 Dec 2013)

  16 Dec 2013; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.4.23.ebuild,
  -haproxy-1.5_beta19.ebuild, +haproxy-1.5_beta20.ebuild:
  Version bump. Cleanup.

*haproxy-1.5_beta19-r1 (17 Sep 2013)

  17 Sep 2013; Tom Wijsman <TomWij@gentoo.org> +haproxy-1.5_beta19-r1.ebuild,
  haproxy-9999.ebuild, metadata.xml:
  Revision bump. Add systemd service unit. Add tools USE flag that install halog
  and iprange. EAPI 5. Part of the changes are contributed by Bertrand Jacquin
  (beber), fixes bug #466404.

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> haproxy-1.4.24.ebuild:
  Stable for ppc, wrt bug #473674
