@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst prepare setup
-DEPEND=pcre? ( dev-libs/libpcre ) ssl? ( dev-libs/openssl[zlib?] ) zlib? ( sys-libs/zlib ) virtual/pkgconfig
-DESCRIPTION=A TCP/HTTP reverse proxy for high availability environments
-EAPI=5
-HOMEPAGE=http://haproxy.1wt.eu
-IUSE=+crypt examples +pcre ssl tools vim-syntax +zlib
-KEYWORDS=~amd64 ~ppc ~x86
-LICENSE=GPL-2 LGPL-2.1
-RDEPEND=pcre? ( dev-libs/libpcre ) ssl? ( dev-libs/openssl[zlib?] ) zlib? ( sys-libs/zlib )
-SLOT=0
-SRC_URI=http://haproxy.1wt.eu/download/1.5/src/devel/haproxy-1.5-dev26.tar.gz
-_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	32bd61b45c2f57e468b4ee7311fec8f5	multilib	fac675dcccf94392371a6abee62d909f	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=8b375f2b6efd3831bd9986b8148d66d2
