@@ -4,23 +4,21 @@ Hash: SHA256
 AUX haproxy.initd-r2 1095 SHA256 0136fbcbb9e7c77dfade5a4b0f28522a11f15c84fb0bb79f5f486f6baf00a0c4 SHA512 32c5a78a6545c7357ae4b81d8b236ae7569a6ca55171c7560089d345a7a8ba7d2df2083fc7c43b72031a0f8ad1e5151990530ce7b4d2c967dd959bd0ee542ee5 WHIRLPOOL e5c251617d938f07c9dcdb3008f8ec050bedd9c2dccdd63b4c83d8367795e24be79a1f394808f530f908f0147f72b7a6794a75a240d26d9d23285265f496f1b4
 DIST haproxy-1.4.24.tar.gz 836768 SHA256 680928f4d001be3b59b69d4501f41aeea69e7e56bf183fa032ad6144cf97c7ef SHA512 73371b2c7d22967373e551dbac6831e4c86d63430f9ffc01c5f0e73cd1c902ce04049abf691a08bbcce77aeefff78ea67411f892584d5a85e0387ab108b13806 WHIRLPOOL d2eebbe9a66e87bbca505042e113230162a6a33eede422172cd3f018a3b9b8614d752e97fbf465a35419f4e457d11fb3eb040f2891bc037669898ce13a45406d
 DIST haproxy-1.4.25.tar.gz 838775 SHA256 84408ec1e37bf308c6b45ae3c7e66f2a9d2f762cb689ab6d322c67bba691db62 SHA512 c3424151309be5eea761ff02b29a0e54bd34f5fcb4087e8b99fb2f4cde17bbc3caf07b6cb41ae5a2606325f8a950a06c4683ceb04c05fd6ebf0177326030bca9 WHIRLPOOL 0b32acffc82d216325abd330073717d951aa8cff349d538fa42a9de76154e1f7be5b1718854d04be41f78834b914b83be804557eb20aa174db71769060c9f644
-DIST haproxy-1.5-dev24.tar.gz 1286775 SHA256 430ca2998c894d214b4b0a6ca083ed0159836b2fd6b2de1075454ca21e32227a SHA512 914ad9c43c2dba1b3e0807f5c00934eb9d573015a566bec8586dcaae14f8e495e4597dd2e043c3dd3f1e2e535383162e7e295cc6de6aa88b5a2fc47d9e3abf75 WHIRLPOOL 95585abfed2c85bc722fbdb4bb0f6cd9b828775e6226b84332f9b18da7f793915e0826196c08b716a432d82471263f2ccbd357629570c5a242245e3980f68765
-DIST haproxy-1.5-dev26.tar.gz 1308611 SHA256 fb1557bebb5843c572f81f69d8f8e4ec952963982b2c945989caa471e5b036ae SHA512 28f3b1609fff1ca8fde06a11a9f02dc16c8bbc9141b8d1259cbf9ca040379601cdda75f9db8877e19d9f64d60f81be3fee94e33be392659240f2197b8493fef7 WHIRLPOOL a22ce38ccee8fb03e50c6c3b223311fd59f02817c8a6150034d027db1d35e9eff69b4b22f0318abb1187b54fdfc9f2a46910cb219694219902dbd2ae6b0262c7
+DIST haproxy-1.5.0.tar.gz 1329040 SHA256 6d375b9d762edd371fcb05af63d320bbdc9f9bdcdb366b43ca69b93c655ac19c SHA512 2033e2038c0ebd56950936edb0abd185314ac6453917379ad8abde4d76b1ae660f8642046e7205b32b05a3ee31b2c174a391551563b28603d3834c458ae0becf WHIRLPOOL 0b478d3c2c4d1c3e6d01701b8ba583f13867e5f3fe0bbcd1cfdefbc5003009b24653a175b8e6d44c624f917c35a6c035983010d2ceaa32df91f6f492b86baa17
 EBUILD haproxy-1.4.24.ebuild 2314 SHA256 5cbc45c75a555fcc70cbfc0ac43a7016c8aee439f8c9f79b19bb35249b10f688 SHA512 10fe9e9c8bb3d01b39e795d4ea1635b1a99e39f16c362bcf2480cb9e61f28fe34008dcd9459fbc63a1b4aab984398e591ad872c3295a72f6768b4b5ac5ee18d3 WHIRLPOOL 6ff488778964194421177b56c4300922c14a6ebeac0041b8ae77f244aef55e32dcfbbc1993df02fb53282d816ee355141532c1771adad7daae572adba24d665f
 EBUILD haproxy-1.4.25.ebuild 2319 SHA256 9c15e2d66f203b46086e819b354ded9c3f730a77d7c1a3cee84ba4247788ef61 SHA512 2220686a065dbc421291f941cf710cbc40bcbdb2069f0fef018de3c83e1135a3c9b75f5b64ffe5b3814b338e2de0c167b5551edf3af7bdceed6e62c7f500a975 WHIRLPOOL 1b3c7244b3539cb6e8ab449fb1ab697c073376c234b83f1b915eb0200fd429109568956877df9e8459522067d3c6e39aca21c0d4bdd6a71234472542f54cb7ee
-EBUILD haproxy-1.5_beta24.ebuild 3152 SHA256 0582aab32a5d74e66754f7e9b2b378f1271a730eef901e13f182cf95e016bcb7 SHA512 20696b4911e9c6faa71d3a61a2e415c884ef298d50c6f6ad0fa92dfceda0ff66cb4e7638e3c0602efa43b0fd3fbb822ebb01c79afad8a57462a5585c787e3c7e WHIRLPOOL 5a0906845dcd694fe699614e990978e1c454bf2c24e81a0bea7a348d69c8dea8777ac0dadda93b00919f0ed94e6d2e3c8c69ce459395c1d426998c3eb46d9e95
-EBUILD haproxy-1.5_beta26.ebuild 3152 SHA256 b12d44e53290c503dd61b30d44e9224f0e6d87c9b13533858b21712d33307ca6 SHA512 c7cdb2f7a59880b26196221e7fefd79cf6340be09b39b9564cbd69dae91be400a8088f21a21abfcc13358a7a4ca59f4fa4a53281c49d915947436b8af8032a44 WHIRLPOOL cb2a333557af274367cc7de374af9d1ee501c7cafde89602a3eac7be81332b3ca22e0ee319dab9f40a310655150de20d3fadcba58426f8a536249303f624eefe
+EBUILD haproxy-1.5.0.ebuild 3136 SHA256 c0166d9cec941854f839441b8b475b4900a0a18a728bf38d75b3b0f4a32a9214 SHA512 fc2707a93902a9193ec00f1fb31278c9716787b89bcd0f98714b73c36ed89d2fd171c119898a38d63db26a734da91b1eaf949b29d30cbec2f4717c04a1f02ec1 WHIRLPOOL c775594b88b8a1d7da10f65864bff65c671be5a620bd9d30738a22c86f9021cae0d662a74ddb09f66384c8103a033b8bf35eddfa812980b0b971082d76bba94f
 EBUILD haproxy-9999.ebuild 3109 SHA256 f9652752d42bcd138953fe4cf393acea18a31e9b2283eb1fcf06bff80ecac140 SHA512 82aacdd08628ad385693f13ed08b5cfe571f89909bf871d3e7b9647307743d69c112bc582b4c98ca69e1c4dac0a5f0f34e7641e30c9c90a49315c4f884ffb7f6 WHIRLPOOL 5f6dfdb73df7410b3a9bed5d4615299a59fa8a4e2ab783f41ee5cc7c9b09c5d28f375c53e2b08c6cd65614a09dd53a0920dfcb9dd76d603ffef107ecd6ffdf67
-MISC ChangeLog 16282 SHA256 782f93d08f55b83dde198043f3af41e4afd06f021716e53ae80b3993c52dea02 SHA512 b5a02c3000e3e3db8500141a68ed02208b16ae9051c5db638ac75fed59a0937eaf9ba77ff38e6c576392d592608da32c6848acfab867bc75717d9a380ea8b818 WHIRLPOOL 254b0d42a12fcd6f2d01b201f6254a189b0aa91934083aa1384e5e59cc459db8fdc2a039304295d8b3e39229655c30a82c96b06d84bfba4b22260779891d4e96
+MISC ChangeLog 16470 SHA256 c966d9df1b6bf575d891246916655fbb96fc970f9d562fa467a5494f8e7c93f0 SHA512 749f703b5aa7604bc790ea0996c6f813b5271b2bbaefbc10760971ddf9695de7862e1e489aaab5ff9ff10a62c376de74bfc720f0b64d4ed1a1835bc4ba63dd27 WHIRLPOOL fd6cffacfc62ef8da26b01230971e6642bc390a70ffca2824e2e8ffc9530c8e19be94afe5a8a1e160f20f97b083dbd9514981a924f2c61a67d5bab78d830be12
 MISC metadata.xml 1536 SHA256 1b50a38097c93a5656621fd4ad5e75e886aa47d7f6b4cafbbf88c0078c89b8f6 SHA512 d492805f0d02fcb2c0c4f9a4be7186f416afbc1c924b7eeb07ef3e5e0319685a7ef3f48752fb67be2538237cd88146bacadb4b43cabbab4f1bc91a78aa7ebc4b WHIRLPOOL 505f69206dd51ad75dd8ffea64aafb068eb6289ab4f481093136a393d1e394cddac290f5b7bf437aeac2c404852654ddc16bc3019c8179f2634f19038541d982
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJThhggAAoJEMOx0zmdw4Z1VLYH/1aN8r60vuYwvQw3KQAtDQKF
-1O9+E6KdfYzZJ0TeCHV1tQGzXl/ES9+sLFiRZ0Fxm+uXA4aQ8zeSRhp7v9PE00em
-WI6izELoZ0HDAIrzEHek6r4P2MODhZvsjNAbsciY3G6ieNI/r4OQA2Ko43hp7zpI
-T+9mTkhysSEQICX2Rgh7RQd0lUAOyU7UsYSsDukAUki6zwKdjpKCW+H9kTCRoYW6
-esepVdejUg4WjHzroMs9ww3zII1x64xuLqyyG3b8q9XKYjEgVYEG67pzoZPy4mi4
-ZTS8J0DNW2l6PK2KR/rtbpzYIkSOjEvCBGtXfu0RLAs6juyxxnC9Kv6CyandNjU=
-=2yFu
+iQEcBAEBCAAGBQJTo1p7AAoJEMOx0zmdw4Z1pssIAJhK43t+0pom06IoBod87kSO
+sVos7+XQ9FfCXZfF1343oiotx91uKWoYYLSFFS+NWRDVCo4r1B8IRFyqa4eTcqac
+p4Htx91YAIbAWvt1hvosbM8JyvkcPCX0zUNsPuqGLROGbLr4JCR2yTlYrrNN+MVj
++KfUUYMQKShElD8WzowmnLuJ0JEyM56OL9F4v5Pfd4QSloRoITS3cx1EuXffsSAx
+oMpe9yeb6pkvy28RnIKmTFjcMyIrG6hAjplff7hb+UXlTerChaCgU3/yplQGq+Sa
+X/fr7vv12NyZfEoe2C+QiJIGVv02MrYMWIuYRc41pwc2cAwmspeDFFou0ySm/Ok=
+=zu/S
 -----END PGP SIGNATURE-----
