@@ -1,6 +1,12 @@
 # ChangeLog for net-proxy/haproxy
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/haproxy/ChangeLog,v 1.93 2014/05/28 17:08:27 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/haproxy/ChangeLog,v 1.94 2014/06/19 21:47:34 idl0r Exp $
+
+*haproxy-1.5.0 (19 Jun 2014)
+
+  19 Jun 2014; Christian Ruppert <idl0r@gentoo.org> -haproxy-1.5_beta24.ebuild,
+  -haproxy-1.5_beta26.ebuild, +haproxy-1.5.0.ebuild:
+  Version bump. Cleanup
 
 *haproxy-1.5_beta26 (28 May 2014)
 
